# iDeer

./: .env.example  .gitignore  COMMERCIAL_LICENSE.md  README.en.md  README.md  README.zh-CN.md  base_source.py  cache_utils.py  config.py  desktop-ui.html  main.py  public-web-ui.html  pyproject.toml  requirements.txt  web-ui.html  web_server.py  x_accounts.txt
.github/workflows/: scheduled-report-email.yml
client/: README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
client/public/: about.json
client/src/: App.tsx  AppShell.tsx  api.ts  copy.ts  desktop.css  desktop.ts  desktopViews.tsx  main.tsx  styles.css  swipeView.tsx  types.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: main.rs
desktop/: app.py
docs/: TECHNICAL.md
email_utils/: twitter_template.py
fetchers/: twitter_fetcher.py
profiles/: description.txt  researcher_profile.md
scripts/: run_daily.sh
skills/idea-from-daily/: SKILL.md
skills/ideer-daily-paper/: SKILL.md
skills/ideer-daily-paper/references/: automation.md  presets.md
sources/: __init__.py  arxiv_source.py  github_source.py  huggingface_source.py  semanticscholar_source.py  twitter_source.py
tests/: test_cache_behavior.py
